src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_file_press_n-3.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[2]"
---
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                   
                    │                                                                                                                                                     │                   
                    │                                                                  Delete this file?                                                                  │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                   /tmp/diskonaut_tests/delete_file_press_n/file2                                                    │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                        (y/n)                                                                        │                   
                    │                                                                                                                                                     │                   
                    └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                   
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              

