src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_folder-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                   
                    │                                                                                                                                                     │                   
                    │                                                           Delete folder with 1 children?                                                            │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                    /tmp/diskonaut_tests/delete_folder/subfolder1                                                    │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                        (y/n)                                                                        │                   
                    │                                                                                                                                                     │                   
                    └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                   
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              

